--- a/i_love.html
+++ b/i_love.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Interactive Website</title>
   <link rel="stylesheet" href="i_love.css">
+  <script src="https://www.paypal.com/sdk/js?client-id=YOUR_CLIENT_ID&currency=USD"></script>
+
 </head>
 
 <body>
@@ -34,6 +36,7 @@
     <a href="https://www.paypal.com/your_paypal_link_here" target="_blank">
       <button> <img src="ibuy.png" alt="Buy" width="10%" height="10%"></button>
     </a>
+    <div id="paypal-button-container" class="paypal-button"></div>
   </div>
 
   <script src="i_love.js"></script>
