--- a/i_love.html
+++ b/i_love.html
@@ -33,7 +33,7 @@
   </div>
 
   <div class="buy-button">
-    <a href="https://www.paypal.com/your_paypal_link_here" target="_blank">
+    <a href="https://www.paypal.com/sdk/js?client-id=Adqe_kZLmfknC3FVKQ9rME3Rwa3q-99Y7OtNht9MY2UMRy_sp8owMH1r0GQ2GbSSOXR_xx-_GvrSa5Rq&currency=EUR"" target="_blank">
       <button> <img src="ibuy.png" alt="Buy" width="10%" height="10%"></button>
     </a>
     <div id="paypal-button-container" class="paypal-button"></div>
