--- a/i_love.html
+++ b/i_love.html
@@ -1,19 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Interactive Website</title>
   <link rel="stylesheet" href="i_love.css">
-  <script src="https://www.paypal.com/sdk/js?client-id=YOUR_CLIENT_ID&currency=USD"></script>
-
 </head>
-
 <body>
   <div class="container">
     <div class="top-left">
-      <a href="#" id="image-link" target="_blank">
+      <a href="https://www.uberfordert.com" id="image-link" target="_blank">
         <img id="image-link-toggle" src="1-back.png" alt="Clickable Image"> 
       </a>
     </div>
@@ -24,22 +20,17 @@
       </div>
     </div>
   </div>
-
   <div class="switch-container">
     <label class="switch">
       <input type="checkbox" id="image-switch">
       <span class="slider"></span>
     </label>
   </div>
-
   <div class="buy-button">
-    <a href="https://www.paypal.com/sdk/js?client-id=Adqe_kZLmfknC3FVKQ9rME3Rwa3q-99Y7OtNht9MY2UMRy_sp8owMH1r0GQ2GbSSOXR_xx-_GvrSa5Rq&currency=EUR"" target="_blank">
-      <button> <img src="ibuy.png" alt="Buy" width="10%" height="10%"></button>
-    </a>
+    <button> <img src="ibuy.png" alt="Buy" width="10%" height="10%"></button>
     <div id="paypal-button-container" class="paypal-button"></div>
   </div>
-
   <script src="i_love.js"></script>
 </body>
+</html>
 
-</html> 
