--- a/i_love.html
+++ b/i_love.html
@@ -30,5 +30,6 @@
     <div id="paypal-button-container" class="paypal-button"></div>
   </div>
   <script src="i_love.js"></script>
+  <script src="https://www.paypal.com/sdk/js?client-id=Adqe_kZLmfknC3FVKQ9rME3Rwa3q-99Y7OtNht9MY2UMRy_sp8owMH1r0GQ2GbSSOXR_xx-_GvrSa5Rq&currency=EUR"></script>
 </body>
 </html>
