--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Uberfordert Shirts</title>
+    <link
+      rel="web icon"
+      type="image/png"
+      href="./src/assets/images/i_love-black.png"
+    />
   </head>
   <body>
     <div id="app"></div>
